fixing alignment of header elements

--- a/src/css/grid.css
+++ b/src/css/grid.css
@@ -1,3 +1,28 @@
+header {
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  align-items: center;
+  width: 100%;
+}
+
+#back-button {
+  grid-area: 1 / 1;
+  justify-self: start;
+  margin: 0 10px;
+}
+
+header h1 {
+  grid-area: 1 / 2;
+  text-align: center;
+  margin: 0;
+}
+
+#account-container {
+  grid-area: 1 / 3;
+  justify-self: end;
+  margin: 0 10px;
+}
+
 #page-wrapper {
   display: grid;
   grid-template-columns: 1fr;
